--- a/Read/ReadAndroidWiki/15.经典总结/02.Android编译问题.md
+++ b/Read/ReadAndroidWiki/15.经典总结/02.Android编译问题.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 00.Studio常见命令行
 - 01.AndroidStudio代码报错
-- 02.
+- 02.javassist.NotFoundException: broken jar file?: xxx class
 - 06.如何找出重复依赖
 - 12.如何查看jks的签名信息
 - 13.adb常见错误和命令作用
@@ -41,6 +41,9 @@ https://github.com/leavesCZY/AndroidGuide
 - 五、方法五：如果前四种方法都不能解决你的问题，那么还有一种解决办法
     - 前四种方法全试用，都还是报红，但可以正常编译、安装和运行。那就有可能是你当前AndroidStudio版本太低所致，升级你的AS版本。
 
+
+### 02.javassist.NotFoundException: broken jar file?: xxx class
+- https://blog.csdn.net/bangelua/article/details/88936610
 
 
 ### 06.如何找出重复依赖
