--- a/Read/ReadKotlinWiki/01.基础语法/04.Kotlin函数详细介绍.md
+++ b/Read/ReadKotlinWiki/01.基础语法/04.Kotlin函数详细介绍.md
@@ -1,15 +1,44 @@
 #### 目录介绍
-- 01.with函数说明
-- 02.apply函数说明
-- 03.内联函数
-- 04.自定义访问器
+- 01.说一下函数
+    - 1.1 什么是函数
+    - 1.2 无返回值的函数
+    - 1.3 有返回值的函数
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议或者问题，万事起于忽微，量变引起质变！
+### 01.说一下函数
+#### 1.1 什么是函数
+
+
+#### 1.2 无返回值的函数
+- 没有返回值的函数
+    - Kotlin 中的 Unit 类型类似于 Java 中的 void，可以用于函数没有返回值时的情况
+    ``` kotlin
+    Unit 表示无返回值，对应 java 中 void：
+    fun yc(a: Int, b: Int): Unit {
+        println("sum of $a and $b is ${a + b}")
+    }
+    
+    Unit 的返回类型可以省略：
+    fun yc(a: Int, b: Int) {
+        println("sum of $a and $b is ${a + b}")
+    }
+    ```
+
+
+##### 1.3 有返回值的函数
+- 有返回值
+    ``` kotlin
+    override fun getContentView(): Int {
+        return R.layout.activity_wan_android
+    }
+    ```
+
+
+
+
+
+
 
 
 
