--- a/Read/ReadKotlinWiki/02.高阶拓展/04.Null和判空深度介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/04.Null和判空深度介绍.md
@@ -1,10 +1,71 @@
 #### 目录介绍
-- 01.类型检查
-- 02.智能转换
-- 03.不安全的转换操作符
-- 04.安全的转换操作符
+- 01.说一下NULL前因后世
+- 04.空安全如何理解
+    - 4.1 关于空安全
+    - 4.2 ?.和!!.和?=各自的含义
+    - 4.3 ?:的含义
 
 
+
+
+### 01.说一下NULL前因后世
+
+
+
+### 04 空安全如何理解
+#### 4.1 关于空安全
+- 在 kotlin 中，默认定义的变量不能为 null 的，这可以避免很多的 NullPointerException。
+    ```
+    var b: String? = "abc"
+    b = null
+    指定一个变量可null是通过在类型的最后增加一个问号：
+    
+    var b: String? = "abc"
+    val l = b.length //编译错误
+    当变量声明为可空时，在调用它的属性时无法通过编译
+    
+    var b: String? = "abc"
+    val l = b?.length 
+    可以使用安全操作符 ?.
+    ```
+
+#### 4.2 ?.和!!.和?=各自的含义
+- ?=  使用和含义
+    - 使用 ?= 操作符，当前面的值不为空取前面的值，否则取后面的值，这和java中三目运算符类似
+- !!. 使用和含义
+    - 使用 !!. 操作符可以跳过限制检查通过编译，此时如果变量为空会抛出空指针异常。
+    ```
+    //kotlin:
+    a!!.foo()
+  
+    //相当于java: 
+    if(a!=null){
+     a.foo();
+    }else{
+     throw new KotlinNullPointException();
+    }
+    ```
+- ?.  使用和含义
+    - 使用 ?. 操作符，就先判空，如果不为空则赋值
+    ```
+    //?.
+    //kotlin:
+    a?.foo()
+    //相当于java:
+    if(a!=null){
+     a.foo();
+    }
+    ```
+
+
+#### 4.3 ?:的含义
+- ?: 的意思是，左边的表达式没有成功，则使用右边的结果；
+    - 如下，bannerBean是null,所以bannerBean?.title不会执行，所以最终a == "null"
+    ```
+    var bannerBean : BannerBean? = null
+    var a = bannerBean?.title ?: "null"
+    var id = device.id ?: 0L
+    ```
 
 
 
@@ -90,30 +151,6 @@
 
 
 
-
-
-### 关于其他内容介绍
-#### 01.关于博客汇总链接
-- 1.[技术博客汇总](https://www.jianshu.com/p/614cb839182c)
-- 2.[开源项目汇总](https://blog.csdn.net/m0_37700275/article/details/80863574)
-- 3.[生活博客汇总](https://blog.csdn.net/m0_37700275/article/details/79832978)
-- 4.[喜马拉雅音频汇总](https://www.jianshu.com/p/f665de16d1eb)
-- 5.[其他汇总](https://www.jianshu.com/p/53017c3fc75d)
-
-
-
-#### 02.关于我的博客
-- github：https://github.com/yangchong211
-- 知乎：https://www.zhihu.com/people/yczbj/activities
-- 简书：http://www.jianshu.com/u/b7b2c6ed9284
-- csdn：http://my.csdn.net/m0_37700275
-- 喜马拉雅听书：http://www.ximalaya.com/zhubo/71989305/
-- 开源中国：https://my.oschina.net/zbj1618/blog
-- 泡在网上的日子：http://www.jcodecraeer.com/member/content_list.php?channelid=1
-- 邮箱：yangchong211@163.com
-- 阿里云博客：https://yq.aliyun.com/users/article?spm=5176.100- 239.headeruserinfo.3.dT4bcV
-- segmentfault头条：https://segmentfault.com/u/xiangjianyu/articles
-- 掘金：https://juejin.im/user/5939433efe88c2006afa0c6e
 
 
 
