--- a/Read/ReadMeWiki/10.其他重要/01.Git常见操作命令.md
+++ b/Read/ReadMeWiki/10.其他重要/01.Git常见操作命令.md
@@ -1,19 +1,23 @@
 #### 目录介绍
-- 01.git环境配置说明
-- 02.如何和GitHub连接
-- 03.最简单使用命令
-- 04.查看代码库信息
-- 05.拉取，提交与推送操作
-- 06.分支操作
-- 07.工作区操作
-- 08.远程同步
-- 09.增加/删除/撤销
-- 13.回滚已提交commit
-- 15.遇到一些问题思考
-- 20.git帮助help分析
+- 01.Git简单介绍
+- 02.Git
 
 
 
+
+
+
+feat: 新功能
+fix: 修复问题
+docs: 修改文档
+style: 修改代码格式，不影响代码逻辑
+refactor: 重构代码，理论上不影响现有功能
+perf: 提升性能
+test: 增加修改测试用例
+chore: 修改工具相关（包括但不限于文档、代码生成等）
+deps: 升级依赖
+例如，
+git commit -m 'fix:修复xxxbug'
 
 
 
