--- a/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 02.使用companion object
-- 03.object对象声明
+- 03.object对象声明单例
 
 
 
@@ -37,13 +37,18 @@
     ```
     
 
-### 03.object对象声明
+
+### 03.object对象声明单例
 - 在Java中，单例的声明可能具有多种方式：
     - 如懒汉式、饿汉式、静态内部类、枚举等；
 - 在Kotlin中，单例模式的实现只需要一个 object 关键字即可；
+    - object 关键字声明,其内部不允许声明构造方法，其中init代码块对应java中static代码块
     ```
-    // Kt文件中的声明方式： object 关键字声明,其内部不允许声明构造方法
     object SingleObject {
+        init {
+            //对应java中static代码块
+            LogUtils.e("SingleObject"+"init")
+        }
         fun test() {
             //...
         }
