--- a/Read/ReadKotlinWiki/01.基础语法/01.Kotlin基本语法介绍.md
+++ b/Read/ReadKotlinWiki/01.基础语法/01.Kotlin基本语法介绍.md
@@ -4,11 +4,12 @@
     - 1.2 val常量
     - 1.3 基本类型与Java区别
     - 1.4 Any 和 Any?
-- 06.运算符重载
-    - 6.1 一元操作符
-    - 6.2 二元操作符
-    - 6.3 数组操作符
-    - 6.4 等于操作符
+- 02.字符串模板
+- 03.运算符重载
+    - 3.1 一元操作符
+    - 3.2 二元操作符
+    - 3.3 数组操作符
+    - 3.4 等于操作符
 
 
 
@@ -96,9 +97,22 @@
     ```
 
 
+### 02.字符串模板
+- Kotlin 支持在字符串字面值中引用局部变量，只需要在变量名前加上字符$即可，此外还可以包含用花括号括起来的表达式，此时会自动求值并把结果合并到字符串中。
+    ```
+    val intValue = 100
+    //可以直接包含变量
+    println("intValue value is $intValue") //intValue value is 100
+    //也可以包含表达式
+    println("(intValue + 100) value is ${intValue + 100}")   //(intValue + 100) value is 200
+    LogUtils.e("索引-------$selectIndex")
+    ```
+- 如果你需要在原始字符串中表示字面值（$）字符（它不支持反斜杠转义），可以用下列语法：
+    ```
+    val price = "${'$'}100.99"
+    println(price)  //$100.99
+    ```
 
-#### 03 构造方法
-- 实例化代码不需要new
 
 
 
@@ -106,11 +120,11 @@
 
 
 
-### 06.运算符重载
+### 03.运算符重载
 - Kotlin 允许为类型提供预定义的操作符实现，这些操作符具有固定的符号表示（例如 + 和 * ）和固定的优先级，通过操作符重载可以将操作符的行为映射到指定的方法。为实现这样的操作符，需要为类提供一个固定名字的成员函数或扩展函数，相应的重载操作符的函数需要用 operator 修饰符标记
 
 
-#### 6.1 一元操作符
+#### 3.1 一元操作符
 - 如下所示
     | 操作符| 函数  |
     | -------------  | :-------------: |
@@ -120,7 +134,7 @@
     |a++| a.inc() |
     |a--| a.dec() |
 
-#### 6.2 二元操作符
+#### 3.2 二元操作符
 - 如下所示
     | 操作符  |       函数       |
     | ------- | :--------------: |
@@ -138,7 +152,7 @@
     | a /= b  |  a.divAssign(b)  |
     | a %= b  |  a.remAssign(b)  |
 
-#### 6.3 数组操作符
+#### 3.3 数组操作符
 - 如下所示
     | 操作符               |          函数           |
     | -------------------- | :---------------------: |
@@ -149,7 +163,7 @@
     | a[i, j] = b          |     a.set(i, j, b)      |
     | a[i_1, ..., i_n] = b | a.set(i_1, ..., i_n, b) |
 
-#### 6.4 等于操作符
+#### 3.4 等于操作符
 - 如下所示
     | 操作符 |             函数              |
     | ------ | :---------------------------: |
@@ -164,7 +178,7 @@
 
 
 
-#### 6.5 比较操作符
+#### 3.5 比较操作符
 - 如下所示
     | 操作符 |        函数         |
     | ------ | :-----------------: |
