--- a/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 02.使用companion object
 - 03.object对象声明单例
-
+- 08.data class 实践说明
 
 
 
@@ -80,8 +80,15 @@
 
 
 
-
-
+### 08.data class 实践说明
+- 首先说一下场景
+    - 在 kotlin 中我们定义一个模型类，比如 User 类。如果对象属性非常多的情况下，那么 toString 方法将变得非常臃肿，那有没有简介的方法可以实现 toString 方法，答案是有的，那就是 data 关键字。
+- data class 介绍
+    - data class算是Kotlin中一大闪光点，data class就是一个类中只包含一些数据字段，类似于java bean。一般而言，在Java中定义了这个数据类之后要重写一下toString，equals等方法，要生成get,set方法。
+- 在申明一个 data class 有一些需要注意的事项。
+    - 主构造函数必须要至少有一个参数。主构造函数中的所有参数必须被标记为val或者var
+    - 数据类不能有以下修饰符：abstract，inner,open,sealed
+    - data class只能实现接口（Kotlin1.1以前的规则），现在也可以继承其它类
 
 
 
