--- a/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
@@ -1,7 +1,10 @@
 #### 目录介绍
 - 02.使用companion object
 - 03.object对象声明单例
-- 08.data class 实践说明
+- 08.数据类与密封类
+    - 8.1 data class 数据类
+    - 8.2 sealed class 密封类
+
 
 
 
@@ -80,7 +83,8 @@
 
 
 
-### 08.data class 实践说明
+### 08.数据类与密封类
+#### 8.1 data class 数据类
 - 首先说一下场景
     - 在 kotlin 中我们定义一个模型类，比如 User 类。如果对象属性非常多的情况下，那么 toString 方法将变得非常臃肿，那有没有简介的方法可以实现 toString 方法，答案是有的，那就是 data 关键字。
 - data class 介绍
@@ -89,9 +93,15 @@
     - 主构造函数必须要至少有一个参数。主构造函数中的所有参数必须被标记为val或者var
     - 数据类不能有以下修饰符：abstract，inner,open,sealed
     - data class只能实现接口（Kotlin1.1以前的规则），现在也可以继承其它类
+- 数据类使用说明
+    - 声明格式：data class 类名(val/var param1 ：数据类型,…){}
 
 
-
+#### 8.2 sealed class 密封类
+- 首先说一下场景
+    - 待订
+- sealed class 介绍
+    - 密封类用来表示受限的类继承结构：当一个值为有限几种的类型、而不能有任何其他类型时。在某种意义上，他们是枚举类的扩展：枚举类型的值集合也是受限的，但每个枚举常量只存在一个实例，而密封类的一个子类可以有可包含状态的多个实例。
 
 
 
