--- a/Read/ReadShareWiki/07.底层思维/02.自我自控的调节.md
+++ b/Read/ReadShareWiki/07.底层思维/02.自我自控的调节.md
@@ -20,7 +20,12 @@
 
 
 ### 02.自控力两大基石
-- 言传身教：如果这些是要求别人做到的，你自己能否先做到？如同在公司里，你要求大家上班不迟到，那么你自己能否做到不迟到。如果有些规则你自己都没做到却要求别人，他们慢慢地会对你说的话不当一回事，对一些规则也不放在心上。
+#### 2.1 言传身教
+- 言传身教：如果这些是要求别人做到的，你自己能否先做到？如同在公司里，你要求大家上班不迟到，那么你自己能否做到不迟到。
+- 如果有些规则你自己都没做到却要求别人，他们慢慢地会对你说的话不当一回事，对一些规则也不放在心上。
+
+
+#### 2.2 信守承诺
 - 信守承诺：为什么信守承诺对自控力特别重要？有一个实验叫“棉花糖实验”：实验者找来一些学生，跟他们说：“我现在要离开房间15分钟，如果你现在不吃棉花糖，我待会儿回来的时候，还会再给你一块棉花糖。”设计实验的心理学家发现，自控力或者拥有延迟享乐能力，是决定学生未来成就的关键。
 
 
@@ -59,7 +64,8 @@
 
 
 ### 07.自控力游戏训练
-- 红灯绿灯停（和高阶版）。红灯绿灯停游戏：听到红灯，所有人不许动；听到绿灯，大家一起往前走。这个游戏玩熟以后，可以尝试高阶版：听到绿灯要停，听到红灯要走。自控的基本特征就是自我调节，可以根据外部环境指令的变化，身体迅速做出调节。“红灯绿灯停”高阶版中的指令改变，相当于增加了一点儿难度，锻炼熟练地根据外部指令的不同，身体及时做出调整。
+- 红灯绿灯停（和高阶版）。红灯绿灯停游戏：听到红灯，所有人不许动；听到绿灯，大家一起往前走。这个游戏玩熟以后，可以尝试高阶版：听到绿灯要停，听到红灯要走。
+- 自控的基本特征就是自我调节，可以根据外部环境指令的变化，身体迅速做出调节。“红灯绿灯停”高阶版中的指令改变，相当于增加了一点儿难度，锻炼熟练地根据外部指令的不同，身体及时做出调整。
 
 
 
