--- a/Business/JetpackBusiness/src/main/res/values/strings.xml
+++ b/Business/JetpackBusiness/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="top_line">M5,10 l14,0</string>
     <string name="middle_line">M5,12 l14,0</string>
     <string name="bottom_line">M5,14 l14,0</string>
-    <string name="home">Home</string>
-    <string name="deeplink">Deep Link</string>
+    <string name="home">首页</string>
+    <string name="dashboard">工作台</string>
+    <string name="deeplink">通知</string>
 </resources>
